using UnityEngine;

public class AnimationStrings
{
    public static readonly int ANIM_ATTACK = Animator.StringToHash("Attack");
    public static readonly int ANIM_MOVEMENT_HORIZONTAL = Animator.StringToHash("Horizontal");
    public static readonly int ANIM_MOVEMENT_VERTICAL = Animator.StringToHash("Vertical");
    public static readonly int ANIM_MOVEMENT_LAST_HORIZONTAL = Animator.StringToHash("LastHorizontal");
    public static readonly int ANIM_MOVEMENT_LAST_VERTICAL = Animator.StringToHash("LastVertical");
}